resources.yaml
apiVersion: v1
kind: Service
metadata:
  name: emicalc
  labels:
    app: emicalc
spec:
  ports:
    - port: 80
  selector:
    app: emicalc
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emicalc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emicalc
  template:
    metadata:
      labels:
        app: emicalc
    spec:
      containers:
      - image: shashankssriva/emi-incometax-calc
        name: emi-incometax-calc
        ports:
        - containerPort: 80
          name: emicalc
